--- a/.env
+++ b/.env
@@ -10,3 +10,15 @@ DYNAMODB_TABLE_3_PROD=table3_prod
 DYNAMODB_TABLE_4_PROD=table4_prod
 DYNAMODB_TABLE_5_PROD=table5_prod
 S3_BUCKET_PROD=my-s3-bucket-prod
+
+# Variables para MySQL
+MYSQL_ROOT_PASSWORD=rootpassword
+MYSQL_DATABASE=etl_db
+MYSQL_USER=etl_user
+MYSQL_PASSWORD=etl_password
+
+#EJECUTAR:
+#1. mkdir -p /path/to/logs
+#2. docker-compose up --build
+#3. sudo apt-get install lnav
+#4. lnav /path/to/logs/*.log
