--- a/.env
+++ b/.env
@@ -4,12 +4,12 @@ AWS_REGION=us-east-1
 FILE_FORMAT=csv
 
 # Variables para prod
-DYNAMODB_TABLE_1_PROD=table1_prod
-DYNAMODB_TABLE_2_PROD=table2_prod
-DYNAMODB_TABLE_3_PROD=table3_prod
-DYNAMODB_TABLE_4_PROD=table4_prod
-DYNAMODB_TABLE_5_PROD=table5_prod
-S3_BUCKET_PROD=my-s3-bucket-prod
+DYNAMODB_TABLE_1_PROD=dev-proyecto_productos
+DYNAMODB_TABLE_2_PROD=dev-proyecto-pedidos
+DYNAMODB_TABLE_3_PROD=dev-proyecto-tienda
+DYNAMODB_TABLE_4_PROD=dev-proyecto-usuarios
+DYNAMODB_TABLE_5_PROD=dev-t_categorias
+S3_BUCKET_PROD=bucket-ciencia-datos-dev
 
 # Variables para MySQL
 MYSQL_ROOT_PASSWORD=rootpassword
@@ -22,3 +22,20 @@ MYSQL_PASSWORD=etl_password
 #2. docker-compose up --build
 #3. sudo apt-get install lnav
 #4. lnav /path/to/logs/*.log
+#sudo chmod -R 755 /var/snap/docker/common/var-lib-docker/volumes/ingestadev_mysql_data/_data
+#sudo usermod -aG docker $USER
+
+#ELIMINAR CONTENEDORES SIN DISTINCIÓN
+#docker rm -f $(docker ps -aq)
+
+#ELIMINAR IMÁGENES SIN DISTINCIÓN
+#docker rmi -f $(docker images -aq)
+
+#ELIMINAR LAS REDES SIN DISTINCIÓN
+#docker network prune -f
+
+#ACCEDER A LA MAQUINA VIRTUAL MYSQL
+#docker exec -it ingestadev_mysql_1 /bin/bash
+
+#MODIFICAR EL BIND ADDRES PARA LOOKERSTUDIO (bind-address = 0.0.0.0)
+#vim /etc/my.cnf
