--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - "3307:3306"
     volumes:
       - mysql_data:/var/lib/mysql
-
+    restart: always
   ingest1:
     build: .
     environment:
@@ -25,6 +25,7 @@ services:
     volumes:
       - logs:/logs
       - /home/ubuntu/.aws/credentials:/root/.aws/credentials:ro
+    command: ["python", "ingest_service1.py"]
 
   ingest2:
     build: .
@@ -38,6 +39,7 @@ services:
     volumes:
       - logs:/logs
       - /home/ubuntu/.aws/credentials:/root/.aws/credentials:ro
+    command: ["python", "ingest_service2.py"]
 
   ingest3:
     build: .
@@ -51,6 +53,7 @@ services:
     volumes:
       - logs:/logs
       - /home/ubuntu/.aws/credentials:/root/.aws/credentials:ro
+    command: ["python", "ingest_service3.py"]
 
   ingest4:
     build: .
@@ -64,6 +67,7 @@ services:
     volumes:
       - logs:/logs
       - /home/ubuntu/.aws/credentials:/root/.aws/credentials:ro
+    command: ["python", "ingest_service4.py"]
 
   ingest5:
     build: .
@@ -77,16 +81,21 @@ services:
     volumes:
       - logs:/logs
       - /home/ubuntu/.aws/credentials:/root/.aws/credentials:ro
+    command: ["python", "ingest_service5.py"]
 
   etl:
     build: .
     environment:
-      - MYSQL_DATABASE=${MYSQL_DATABASE}
-      - MYSQL_USER=${MYSQL_USER}
-      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
+      - DYNAMODB_TABLE=${DYNAMODB_TABLE_5_PROD}
+      - S3_BUCKET=${S3_BUCKET_PROD}
+      - FILE_FORMAT=${FILE_FORMAT}
       - CONTAINER_NAME=etl
     depends_on:
-      - mysql
+      - ingest1
+      - ingest2
+      - ingest3
+      - ingest4
+      - ingest5
     volumes:
       - logs:/logs
       - /home/ubuntu/.aws/credentials:/root/.aws/credentials:ro
@@ -99,4 +108,5 @@ volumes:
     driver_opts:
       type: none
       o: bind
-      device: /path/to/logs
+      device: /home/ubuntu/logs
+
