--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Variables comunes
-AWS_ROLE_ARN=arn:aws:iam::123456789012:role/MyRole
+AWS_ROLE_ARN=arn:aws:iam::194347069948:role/LabRole
 AWS_REGION=us-east-1
 FILE_FORMAT=csv
 
