--- a/.env
+++ b/.env
@@ -37,5 +37,8 @@ MYSQL_PASSWORD=etl_password
 #ACCEDER A LA MAQUINA VIRTUAL MYSQL
 #docker exec -it ingestadev_mysql_1 /bin/bash
 
+#ACCEDER A LA BASE DE DATOS MYSQL
+#docker exec -it ingestaprod-mysql-1 mysql -uetl_user -petl_password etl_db
+
 #MODIFICAR EL BIND ADDRES PARA LOOKERSTUDIO (bind-address = 0.0.0.0)
 #vim /etc/my.cnf
