--- a/.env
+++ b/.env
@@ -42,3 +42,13 @@ MYSQL_PASSWORD=etl_password
 
 #MODIFICAR EL BIND ADDRES PARA LOOKERSTUDIO (bind-address = 0.0.0.0)
 #vim /etc/my.cnf
+
+
+#QUERYS
+#USE etl_db;
+#SHOW TABLES;
+#SELECT * FROM summary_table_ingest_service_1 LIMIT 10;
+#SELECT * FROM summary_table_ingest_service_2 LIMIT 10;
+#SELECT * FROM summary_table_ingest_service_3 LIMIT 10;
+#SELECT * FROM summary_table_ingest_service_4 LIMIT 10;
+#SELECT * FROM summary_table_ingest_service_5 LIMIT 10;
