--- a/.env
+++ b/.env
@@ -37,12 +37,11 @@ MYSQL_PASSWORD=etl_password
 #ACCEDER A LA MAQUINA VIRTUAL MYSQL
 #docker exec -it ingestadev_mysql_1 /bin/bash
 
-#ACCEDER A LA BASE DE DATOS MYSQL
-#docker exec -it ingestaprod-mysql-1 mysql -uetl_user -petl_password etl_db
-
 #MODIFICAR EL BIND ADDRES PARA LOOKERSTUDIO (bind-address = 0.0.0.0)
 #vim /etc/my.cnf
 
+#ACCEDER A LA BASE DE DATOS MYSQL
+#docker exec -it ingestaprod-mysql-1 mysql -uetl_user -petl_password etl_db
 
 #QUERYS
 #USE etl_db;
@@ -52,3 +51,25 @@ MYSQL_PASSWORD=etl_password
 #SELECT * FROM summary_table_ingest_service_3 LIMIT 10;
 #SELECT * FROM summary_table_ingest_service_4 LIMIT 10;
 #SELECT * FROM summary_table_ingest_service_5 LIMIT 10;
+
+#LIMPIAR DOCKER
+# Detener todos los contenedores
+#docker stop $(docker ps -aq)
+
+# Eliminar todos los contenedores
+#docker rm -f $(docker ps -aq)
+
+# Eliminar todas las imágenes
+#docker rmi -f $(docker images -aq)
+
+# Eliminar todos los volúmenes
+#docker volume prune -f
+
+# Eliminar todas las redes
+#docker network prune -f
+
+# Limpiar el sistema de Docker
+#docker system prune -a -f --volumes
+
+# Verificar el uso del disco
+#df -h
