--- a/.env
+++ b/.env
@@ -73,3 +73,8 @@ MYSQL_PASSWORD=etl_password
 
 # Verificar el uso del disco
 #df -h
+
+
+#PERMITIR CONECCIONES REMOTAS MYSQL
+#docker exec -it ingestaprod-mysql-1 bash
+#sed -i 's/^bind-address\s*=.*/bind-address = 0.0.0.0/' /etc/my.cnf
